[package]
name = "nes-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
thiserror = "2.0.12"
strum = "0.27.1"
strum_macros = "0.27.1"
minifb = "0.28.0"
bitflags = "2.9.0"
cpal = "0.15.3"
blip_buf = "0.1.5"
crossbeam-channel = "0.5.14"
